--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,9 @@ name = "server"
 path = "src/main.rs"
 
 [dependencies]
-rand = "0.6.5"
 actix-web = "0.7.19"
+lazy_static = "1.3.0"
+rand = "0.6.5"
 openssl-sys = "*"
 
 [features]
