--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,11 @@ path = "src/main.rs"
 [dependencies]
 actix-web = "0.7.19"
 lazy_static = "1.3.0"
-rand = "0.6.5"
 openssl-sys = "*"
+rand = "0.6.5"
+reqwest = "0.9.17"
+serde = "1.0.91"
+serde_json = "1.0.39"
 
 [features]
 # Force openssl-sys to staticly link in the openssl library. Necessary when
